# delta-prune

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
benchmarks/: README.md  bench_lib.py  run_benchmark.py
benchmarks/data/: tasks.json
docs/: RELEASE.md
src/delta_prune/: __init__.py  embedding.py  extractor.py  llm.py  llm_parser.py  prompts.py  pruner.py  resolver.py
tests/: test_benchmark.py  test_pruner.py
